@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/traitsui
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/traitsui/ChangeLog,v 1.10 2015/01/23 05:11:09 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/traitsui/ChangeLog,v 1.11 2015/03/06 22:39:56 pacho Exp $
+
+  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> traitsui-4.4.0.ebuild:
+  amd64 stable, bug 540290
 
   23 Jan 2015; Manuel Rüger <mrueg@gentoo.org> -traitsui-4.0.1.ebuild,
   -traitsui-4.1.0.ebuild, -traitsui-4.2.0.ebuild, -traitsui-4.3.0.ebuild:
